crates/sui-prover/tests/snapshots/quantifiers/find_indices_big.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: verification out of resources/timeout (global timeout set to 45s)
   ┌─ tests/inputs/quantifiers/find_indices_big.ok.move:18:1
   │  
18 │ ╭ fun test_find_indices_big() {
19 │ │     let v = vector[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16];
20 │ │     // Even elements are at indices 1, 3, 5, 7, 9, 11, 13, 15.
21 │ │     ensures(find_indices!<u64>(&v, |x| is_even(x)) == vector[1, 3, 5, 7, 9, 11, 13, 15]);
22 │ │ }
   │ ╰─^
