crates/sui-prover/tests/snapshots/quantifiers/forall_exists.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 155
expression: output
---
Verification successful
