crates/sui-prover/tests/snapshots/quantifiers/funs_non_deterministic.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: Quantifier function should be deterministic
   ┌─ tests/inputs/quantifiers/funs_non_deterministic.fail.move:11:1
   │  
11 │ ╭ fun x_is_gte_0_non_deterministic(x: &u8, r: &Random, ctx: &mut TxContext): bool {
12 │ │     let mut generator = new_generator(r, ctx); // non-deterministic
13 │ │     let dice_value = generate_u8_in_range(&mut generator, 1, 6);
14 │ │     *x + dice_value >= 0
15 │ │ }
   │ ╰─^
