crates/sui-prover/tests/snapshots/quantifiers/internal_var_usage_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 260
expression: output
---
exiting with bytecode transformation errors
error: Invalid quantifier macro pattern: lambda parameter is used externally
   ┌─ tests/inputs/quantifiers/internal_var_usage_fail.move:9:1
   │  
 9 │ ╭ fun invariant_expression(j: u64, i: u64, u_j: u8, v_i: u8): bool {
10 │ │     j <= i && u_j > v_i
11 │ │ }
   │ ╰─^
