crates/sui-prover/tests/snapshots/quantifiers/loop_inv_count.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 274
expression: output
---
Verification successful
