crates/sui-prover/tests/snapshots/quantifiers/map_range.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 268
expression: output
---
Verification successful


== Generated Boogie Code ==
function {:inline} $42_quantifiers_map_range_ok_x_plus_10$pure(_$t0: int) returns ($ret0: int)
{
    (var $t2 := 18446744073709551605;
    (var $t3 := (_$t0 < $t2);
    (var $t4 := 10;
    (var $t5 := (_$t0 + $t4);
    (var $t7 := 18446744073709551615;
    (var $t8 := $t7;
    (var $t9 := (if $t3 then $t5 else $t8);
    $t9)))))))
}
