crates/sui-prover/tests/snapshots/quantifiers/nested_pure.ok.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 277
expression: output
---
Verification successful


== Generated Boogie Code ==
function $MapQuantifierHelper_$42_nested_pure_ok_double$pure(v: Vec (int), start: int, end: int): Vec (int);
axiom (forall v: Vec (int), start: int, end: int:: {$MapQuantifierHelper_$42_nested_pure_ok_double$pure(v, start, end)}
function $FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(v: Vec (int), start: int, end: int): int;
axiom (forall v: Vec (int), start: int, end: int :: {$FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(v, start, end)}
function $FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(v: Vec (int), start: int, end: int): Vec (int);
axiom (forall v: Vec (int), start: int, end: int :: {$FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(v, start, end)}
function $FilterQuantifierHelper_$42_nested_pure_ok_is_even$pure(v: Vec (int), start: int, end: int): Vec (int);
axiom (forall v: Vec (int), start: int, end: int :: {$FilterQuantifierHelper_$42_nested_pure_ok_is_even$pure(v, start, end)}
function {:inline} $42_nested_pure_ok_double$pure(_$t0: int) returns ($ret0: int)
{
    (var $t2 := 9000000000;
    (var $t3 := (_$t0 > $t2);
    (var $t4 := _$t0;
    (var $t5 := 2;
    (var $t6 := (_$t0 * $t5);
    (var $t7 := (if $t3 then $t4 else $t6);
    $t7))))))
}
function {:inline} $42_nested_pure_ok_is_even$pure(_$t0: int) returns ($ret0: bool)
{
    (var $t1 := 2;
    (var $t2 := (_$t0 mod $t1);
    (var $t3 := 0;
    (var $t4 := ($t2 == $t3);
    $t4))))
}
function {:inline} $42_nested_pure_ok_vec_all_even$pure(_$t0: Vec (int)) returns ($ret0: bool)
{
    (var $t1 := (forall i:int :: 0 <= i && i < LenVec(_$t0) ==> $42_nested_pure_ok_is_even$pure(ReadVec(_$t0, i)));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_all_even_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: bool)
{
    (var $t3 := (forall i:int :: _$t1 <= i && i < _$t2 ==> $42_nested_pure_ok_is_even$pure(ReadVec(_$t0, i)));
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_count_even$pure(_$t0: Vec (int)) returns ($ret0: int)
{
    (var $t1 := LenVec($FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, 0, LenVec(_$t0)));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_count_even_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: int)
{
    (var $t3 := LenVec($FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, _$t1, _$t2));
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_doubled$pure(_$t0: Vec (int)) returns ($ret0: Vec (int))
{
    (var $t1 := $MapQuantifierHelper_$42_nested_pure_ok_double$pure(_$t0, 0, LenVec(_$t0));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_doubled_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: Vec (int))
{
    (var $t3 := $MapQuantifierHelper_$42_nested_pure_ok_double$pure(_$t0, _$t1, _$t2);
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_filter_even$pure(_$t0: Vec (int)) returns ($ret0: Vec (int))
{
    (var $t1 := $FilterQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, 0, LenVec(_$t0));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_filter_even_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: Vec (int))
{
    (var $t3 := $FilterQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, _$t1, _$t2);
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_find_even$pure(_$t0: Vec (int)) returns ($ret0: $1_option_Option'u64')
{
    (var $t1 := (var $find_res := $FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, 0, LenVec(_$t0)); if $find_res >= 0 then $1_option_Option'u64'(MakeVec1(ReadVec(_$t0, $find_res))) else $1_option_Option'u64'(EmptyVec()));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_find_even_idx$pure(_$t0: Vec (int)) returns ($ret0: $1_option_Option'u64')
{
    (var $t1 := (var $find_res := $FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, 0, LenVec(_$t0)); if $find_res >= 0 then $1_option_Option'u64'(MakeVec1($find_res)) else $1_option_Option'u64'(EmptyVec()));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_find_even_idx_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: $1_option_Option'u64')
{
    (var $t3 := (var $find_res := $FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, _$t1, _$t2); if $find_res >= 0 then $1_option_Option'u64'(MakeVec1($find_res)) else $1_option_Option'u64'(EmptyVec()));
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_find_even_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: $1_option_Option'u64')
{
    (var $t3 := (var $find_res := $FindIndexQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, _$t1, _$t2); if $find_res >= 0 then $1_option_Option'u64'(MakeVec1(ReadVec(_$t0, $find_res))) else $1_option_Option'u64'(EmptyVec()));
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_find_even_indices$pure(_$t0: Vec (int)) returns ($ret0: Vec (int))
{
    (var $t1 := $FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, 0, LenVec(_$t0));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_find_even_indices_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: Vec (int))
{
    (var $t3 := $FindIndicesQuantifierHelper_$42_nested_pure_ok_is_even$pure(_$t0, _$t1, _$t2);
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_has_even$pure(_$t0: Vec (int)) returns ($ret0: bool)
{
    (var $t1 := (exists i:int :: 0 <= i && i < LenVec(_$t0) && $42_nested_pure_ok_is_even$pure(ReadVec(_$t0, i)));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_has_even_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: bool)
{
    (var $t3 := (exists i:int :: _$t1 <= i && i < _$t2 && $42_nested_pure_ok_is_even$pure(ReadVec(_$t0, i)));
    $t3)
}
function {:inline} $42_nested_pure_ok_vec_sum_doubled$pure(_$t0: Vec (int)) returns ($ret0: $1_integer_Integer)
{
    (var $t1 := $0_vec_$sum'u64'($MapQuantifierHelper_$42_nested_pure_ok_double$pure(_$t0, 0, LenVec(_$t0)), 0, LenVec(_$t0));
    $t1)
}
function {:inline} $42_nested_pure_ok_vec_sum_doubled_in_range$pure(_$t0: Vec (int), _$t1: int, _$t2: int) returns ($ret0: $1_integer_Integer)
{
    (var $t3 := (var $temp_map := $MapQuantifierHelper_$42_nested_pure_ok_double$pure(_$t0, _$t1, _$t2); $0_vec_$sum'u64'($temp_map, 0, LenVec($temp_map)));
    $t3)
}
